z-index fix

--- a/photographer-portfolio-frontend/src/pages/styles/_Album.scss
+++ b/photographer-portfolio-frontend/src/pages/styles/_Album.scss
@@ -231,6 +231,7 @@
   display: flex;
   flex-direction: column;
   gap: 12px;
+  z-index: 11;
 
   .album__preview__btn-close {
     position: relative;
