--- a/photographer-portfolio-frontend/src/styles/style.css
+++ b/photographer-portfolio-frontend/src/styles/style.css
@@ -1110,6 +1110,7 @@ select {
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 12px;
+  z-index: 11;
 }
 
 .album__preview-image__container .album__preview__btn-close {
